// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a person to an org in allByOrg when it is loaded and the person in that org does not exist 1`] = `
Object {
  "100": Object {
    "id": "100",
    "name": "Test Org",
    "people": Object {
      "1": Object {
        "id": "1",
      },
      "2": Object {
        "first_name": "Fname",
        "id": "2",
        "last_name": "Lname",
      },
      "4": Object {
        "first_name": "Test Person",
        "id": "4",
      },
    },
  },
  "personal": Object {
    "id": "personal",
    "people": Object {
      "2": Object {
        "first_name": "Fname",
        "id": "2",
        "last_name": "Lname",
      },
      "3": Object {
        "id": "3",
      },
    },
  },
}
`;

exports[`should add an org for a person in allByOrg when it is loaded and the org does not exist 1`] = `
Object {
  "100": Object {
    "id": "100",
    "name": "Test Org",
    "people": Object {
      "1": Object {
        "id": "1",
      },
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
      },
    },
  },
  "105": Object {
    "id": "105",
    "name": "",
    "people": Object {
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
      },
    },
  },
  "personal": Object {
    "id": "personal",
    "people": Object {
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
      },
      "3": Object {
        "id": "3",
      },
    },
  },
}
`;

exports[`should delete a person from allByOrg  1`] = `
Object {
  "100": Object {
    "id": "100",
    "name": "Test Org",
    "people": Object {
      "1": Object {
        "id": "1",
      },
    },
  },
  "personal": Object {
    "id": "personal",
    "people": Object {
      "2": Object {
        "first_name": "Fname",
        "id": "2",
        "last_name": "Lname",
      },
      "3": Object {
        "id": "3",
      },
    },
  },
}
`;

exports[`should replace a person in allByOrg when it is loaded with more includes 1`] = `
Object {
  "100": Object {
    "id": "100",
    "name": "Test Org",
    "people": Object {
      "1": Object {
        "id": "1",
      },
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
      },
    },
  },
  "personal": Object {
    "id": "personal",
    "name": "",
    "people": Object {
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
      },
      "3": Object {
        "id": "3",
      },
    },
  },
}
`;

exports[`should update attributes of a person in allByOrg  1`] = `
Object {
  "100": Object {
    "id": "100",
    "name": "Test Org",
    "people": Object {
      "1": Object {
        "id": "1",
      },
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
        "last_name": "Lname",
      },
    },
  },
  "personal": Object {
    "id": "personal",
    "people": Object {
      "2": Object {
        "first_name": "Test Person",
        "id": "2",
        "last_name": "Lname",
      },
      "3": Object {
        "id": "3",
      },
    },
  },
}
`;
